user controller crud + html files + pagination